--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
         "bootstrap": "^5.1.3",
         "browser-sync": "^2.27.7",
         "browser-sync-webpack-plugin": "^2.3.0",
-        "laravel-mix": "^6.0.6",
+        "laravel-mix": "^6.0.41",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1"
+    },
+    "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^31.1.0"
     }
 }
