--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "@popperjs/core": "^2.10.2",
         "axios": "^0.21",
         "bootstrap": "^5.1.3",
-        "browser-sync": "^2.27.7",
+        "browser-sync": "^2.27.8",
         "browser-sync-webpack-plugin": "^2.3.0",
         "laravel-mix": "^6.0.41",
         "lodash": "^4.17.19",
@@ -24,6 +24,7 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
-        "@ckeditor/ckeditor5-build-classic": "^31.1.0"
+        "@ckeditor/ckeditor5-build-classic": "^31.1.0",
+        "font-awesome": "^4.7.0"
     }
 }
